# gistyc

./: .gitignore  README.md  mypy.ini  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: gist-push.yml  python-package.yml  python-publish.yml
examples/: gistyc_example1.py
examples/example_sub_dir/: gistyc_example2.py
gistyc/: __init__.py  cli.py  gistyc.py  test.py
tests/: __init__.py  test_cli.py  test_gistyc.py
tests/_resources/: sample.py
tests/_resources/create/: sample.py
tests/_resources/update/: sample.py
tests/_resources/update_dir/: sample2.py
tests/_resources/update_dir/sample1/: sample1.py
