[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[metadata]
# See https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = gistyc
version = attr: gistyc.__version__
url = https://github.com/ThomasAlbin/gistyc
description = A CLI for creating, updating and deleting GitHub GISTs
long_description = file: README.md
long_description_content_type=text/markdown
author = attr: gistyc.__author__
project_urls =
    Source = https://github.com/ThomasAlbin/gistyc
    Tracker = https://github.com/ThomasAlbin/gistyc/issues
license= MIT License
keywords = github, gist

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

platforms = unix, linux, osx, win32

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    wheel>=0.29.0
    setuptools>=30.3
install_requires =
    certifi
    click
    requests

python_requires = >=3.8

# [options.extras_require]
# some_name =
#    some_package

[options.entry_points]
console_scripts =
    gistyc = gistyc.cli:run

[options.packages.find]
exclude =
    contrib
    docs
    tests
    examples

[flake8]
max-line-length = 100
ignore = F401